--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,9 +48,7 @@
 
         <service
             android:name=".services.LocationService"
-            android:enabled="true"
-            android:exported="false" />
-
+            android:exported="false"></service>
         <activity android:name=".activities.DrawPath"></activity>
     </application>
 
